Fixing some layout bugs introduced in the header

--- a/src/scss/objects.header.scss
+++ b/src/scss/objects.header.scss
@@ -15,7 +15,7 @@
       align-items: center;
   }
   
-  .o-header-link[href="cart"] {
+  .o-header-link[href="#cart"] {
     @include scale-min-max(width, 40, 45);
     @include scale-min-max(height, 40, 45);
   }
@@ -49,8 +49,8 @@
 
     .o-header-link {
         margin-left: 15px;
-        &:nth-of-type(2), &:nth-of-type(3) {
-          display: none !important;
+        &[href="#story"] {
+          display: none;
         }
     }
   }
